--- a/examples/fTT_gravity/ftt_swift_lowres.yml
+++ b/examples/fTT_gravity/ftt_swift_lowres.yml
@@ -10,14 +10,14 @@ InternalUnitSystem:
   UnitCurrent_in_cgs:  1             # Amperes
   UnitTemp_in_cgs:     1             # Kelvin
 
-# Planck-13 cosmology
+# CC+SN+BAO+CMB best-fit cosmology
 Cosmology:
   h:              0.6672
   a_begin:        0.0078125     # z_ini = 127
   a_end:          1.0      # z_end = 0
-  Omega_cdm:      0.2778     # Cold Dark Matter density parameter
+  Omega_cdm:      0.2779     # Cold Dark Matter density parameter
   Omega_lambda:   0.6722         # Dark-energy density parameter
-  Omega_b:        0.05     # Baryon density parameter
+  Omega_b:        0.0499     # Baryon density parameter
   cosmology_type: fTT  		#Kind of modified gravity that we consider
   cosmology_tables_dir: ../../cosmology_tables/
 
